--- a/EjerciciosTema7/Views/PaginaTabbed.xaml
+++ b/EjerciciosTema7/Views/PaginaTabbed.xaml
@@ -1,12 +1,13 @@
 ﻿<TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:local="clr-namespace:EjerciciosTema7.Views"
-            x:Class="EjerciciosTema7.Views.PaginaTabbed">
+            x:Class="EjerciciosTema7.Views.PaginaTabbed"
+            BarBackground="LightBlue"
+            BarBackgroundColor="Blue"
+            SelectedTabColor="LightBlue"
+            UnselectedTabColor="SkyBlue"
+            BarTextColor="White">
     <local:pagina1></local:pagina1>
     <local:pagina2></local:pagina2>
     <local:pagina3></local:pagina3>
-
-    <TabBar>
-        <Tab Icon="fotos/icono1.jpg"
-    </TabBar>
 </TabbedPage>
