--- a/EjerciciosTema7/Views/pagina1.xaml
+++ b/EjerciciosTema7/Views/pagina1.xaml
@@ -2,10 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="EjerciciosTema7.Views.pagina1"
-             Title="Pagina 1">
+             Title="Pagina 1"
+             IconImageSource="dotnet_bot.svg">
     <VerticalStackLayout>
         <Label 
-            Text="Hola, soy la página 1"
+            Text="Miguel"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
